# financial-managment

./: .env  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/2022-07-16-082135_initial_tables/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/api/: account.rs  mod.rs  transaction.rs  user.rs
src/authentication/: hasher.rs  mod.rs  token_generator.rs
src/db/: mod.rs
src/models/: account.rs  mod.rs  transaction.rs  user.rs
src/routes/: mod.rs
