[package]
name = "financial_managment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features=["json", "secrets"]}
diesel = {version = "2.0.0-rc.0", features = ["postgres", "chrono", "r2d2"]}
chrono = {version = "0.4.15", features=["serde"]}
serde = {version = "1.0.139"}
dotenv = {version = "0.14.1"}
sha2 = {version="0.10.2"}
rand = {version="0.8.5"}
